tests/baselines/reference/wrappedIncovations1(strict=true).errors.txt
wrappedIncovations1.ts(2,4): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.


==== wrappedIncovations1.ts (1 errors) ====
    var v = this
      .foo()
       ~~~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
      .bar()
      .baz();